--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,12 @@ html {
   .customWalkthrough {
     scale:85%;
   }
+  .customEvent {
+    font-size: 36px;
+  }
+  .customInstruction{
+    font-size: 16px;
+  }
 }
 
 /*Specifically for Galaxy Fold*/
